resolved issue in add organization alignment

--- a/src/pages/chatmain/OrgadminChatPage/OrgAdminChatPage.css
+++ b/src/pages/chatmain/OrgadminChatPage/OrgAdminChatPage.css
@@ -53,7 +53,7 @@
   border-radius: 15px;
   background: var(--Neutral-200, #e2e8f0);
   width: 100vw;
-  height: 92vh;
+  height: auto;
   justify-content: center;
   text-align: center;
   border-radius: 10.457px;
